--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
+.wrapper {
+  margin: auto;
+  width: 50%;
+
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 1rem;
+  margin-top: 3rem;
+  border: 1px solid black;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 10px;
+  border-radius: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+.input {
+  width: 20%;
+  border-radius: 4px;
+  padding: 4px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-container {
+  display: flex;
+  gap: 4px;
+
+}
+
+.btn {
+  padding: 4px;
+  border: 1px solid gray;
+  border-radius: 4px;
+  background-color: rgb(47, 213, 255);
+
+}
+
+.reset-btn {
+  background-color: orangered;
+  color: aliceblue;
 }
